# ActivityTracker

./: .gitignore  Activity.cpp  Activity.h  CMakeLists.txt  Register.cpp  Register.h  Utils.cpp  Utils.h  main.cpp
test/: ActivityTest.cpp  CMakeLists.txt  RegisterTest.cpp  runAllTests.cpp
